--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.5"
-        android:src="@drawable/my_photo" />
+        android:src="@drawable/my_photo2" />
 
     <TextView
         android:layout_height="wrap_content"
